--- a/css/anim.css
+++ b/css/anim.css
@@ -1,6 +1,6 @@
 #anim{
-    /* position: fixed; */
     position: relative;
+    top:70px;
     z-index: -10;
     width: 100%;
     height: calc(100vh - 80px);
