--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 }
 .heading{
     font-size: 3em;
-    margin: 1em 0em 1em 1em;
+    margin: 2em 0em 1em 1em;
     font-family: 'Lato', sans-serif;
 }
 #projects{
@@ -75,7 +75,12 @@ body{
     display: grid;
     align-items: center;
     justify-items: center;
-    background-color: greenyellow;
+    background-color: rgb(54,81,111);
+    color: #ffffff;
+}
+.back p{
+  margin: 0.5em;
+  text-align: justify;
 }
 
 @media screen and (max-width: 1000px) {
