--- a/css/header.css
+++ b/css/header.css
@@ -71,7 +71,7 @@
     overflow-x: hidden;
     position: fixed;
     left:0px;
-    background:rgba(0,0,0,0.95);
+    background:#f2f2f2;
     top:0px;
     left:0px;
     z-index: 100;
@@ -79,11 +79,11 @@
     height:100vh;
 }
 #sideNavBar label{
-    color:#fff;
-    font-size: 48px;
+    color: red;
+    font-size: 60px;
     float:right;
     position: relative;
-    top:40px;
+    top:20px;
     padding: 20px;
     margin-bottom: 20px;
     cursor: pointer;
@@ -99,13 +99,13 @@
     text-decoration:none;
     padding: 8px 8px 8px 32px;
     font-size: 25px;
-    color: #818181;
+    color: #000000;
     display: block;
     transition: 0.3s;
 }
 #sideNavBar ul li a:hover{
     color: #f1f1f1;
-    background-color: #000;
+    background-color: #ff7b00;
 }
 /* Footer Section */
 #footer{
@@ -149,9 +149,16 @@
     bottom: 0;
     width: 100%;
     height: 200px;
-    margin-bottom: -7vw;
+    margin-bottom: -6vw;
     padding-top: 6vw;
     padding-bottom: 7vw;
     clip-path: polygon(0% 5vw, 100% 0, 100% 100%, 0% 100%);
     z-index: 99;
+}
+
+#toggle{
+  margin-top: 0.5em;
+  margin-right: 0.4em;
+  padding-top: 0.2em;
+  border-radius: 0.5em;
 }
