--- a/css/header.css
+++ b/css/header.css
@@ -16,6 +16,7 @@
     box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.5);
     color: #fff;
     margin-bottom: 3px;
+    padding: 7px;
 }
 #mainMenu{
     height: 100%;
@@ -46,7 +47,7 @@
     margin-left: 10px;
 }
 #mainMenu ul li a:hover{
-    background: orangered;
+    background: #f66237;
     color:#fff;
 }
 /* The Toggle Button*/
@@ -94,7 +95,7 @@
     visibility: hidden;
 }
 #sideNavBar ul li{
-    width:75%;
+    width:100%;
 }
 #sideNavBar ul li a{
     text-decoration:none;
@@ -102,6 +103,7 @@
     font-size: 25px;
     color: #000000;
     display: block;
+    padding-left: 20%;
 }
 #sideNavBar ul li a:hover{
     color: #f1f1f1;
@@ -109,7 +111,6 @@
 }
 /* Footer Section */
 #footer{
-    margin-top: 10px;
     position: relative;
     bottom:0px;
     width:100%;
@@ -123,8 +124,7 @@
     color:#B9B9B9;
     padding-top: 5vw;
     z-index: 100;
-    /* -webkit-clip-path: polygon(0% 35%, 100% 0, 100% 100%, 0% 100%); */
-    clip-path: polygon(0% 5vw, 100% 0, 100% 100%, 0% 100%);
+
 }
 #footer a{
     text-decoration: none;
@@ -149,10 +149,7 @@
     bottom: 0;
     width: 100%;
     height: 200px;
-    margin-bottom: -6vw;
-    padding-top: 6vw;
-    padding-bottom: 7vw;
-    clip-path: polygon(0% 5vw, 100% 0, 100% 100%, 0% 100%);
+
     z-index: 99;
 }
 
