--- a/css/news.css
+++ b/css/news.css
@@ -2,4 +2,50 @@
     border: 1px solid rgb(185, 185, 185);
     width: 45%;
     min-height: 200px;
+    margin-left: 3em;
+    margin-right: 0.5em;
+}
+
+#news ul{
+  white-space: nowrap;
+  background: #4c7099;
+}
+
+#news ul li{
+  list-style: none;
+  display: inline-block;
+  width: 49.7%;
+  text-align: center;
+  padding: 0.8em 0em 0.8em 0em;
+  background: #4c7099;
+  color:#ffffff;
+  cursor: pointer;
+}
+
+#news ul li:hover{
+  color:#4c7099;
+  background: #d6caca;
+}
+
+.newscontent table tr a{
+  color: #e3560a;
+  text-decoration: none;
+}
+
+.newscontent table tr a:hover{
+  color: #4c7099;
+}
+
+.newscontent table tr td:nth-child(1){
+  width: 5%;
+  text-align: center;
+}
+
+.newscontent table tr td:nth-child(2){
+  width: 80%;
+  padding: 1em 0.4em 1em 0.2em;
+}
+
+.policycontent{
+  display: none;
 }
