--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 }
 body{
     overflow-x: hidden;
+    font-family: 'Lato', sans-serif;
 }
 .heading{
     font-size: 3em;
@@ -154,3 +155,107 @@ body{
     right: 0;
     border-width: 1em 1em 0 0;
    }
+
+#special-area{
+  display: flex;
+  margin-top: 5em;
+}
+
+.btn{
+  padding: 0.6em;
+  border-radius: 1em;
+  background: #4c7099;
+  margin: 0em 1em 1em 0em;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+#activites{
+    position: relative;
+    background-color: orangered;
+    color:#fff;
+    font-size: 1.2em;
+    bottom: 0;
+    width: 100%;
+    margin-top: 4em;
+    padding: 0em 1.5em 1em 1.5em;
+}
+
+#activites .activites-head{
+  margin: 2.5em 0em 0.5em 1em;;
+  font-size: 3em;
+}
+
+#act-content{
+  background: #ffffff;
+  color: #000000;
+  display: flex;
+  margin: 2em 2.5em 1em 0em;
+  border-radius: 1.5em;
+}
+
+.act-tabs{
+  width: 20%;
+  padding: 2em 0em 2em 2em;
+  height: 200px;
+}
+
+.act-tabs li{
+  list-style: none;
+  padding: 1em 0em 1em 0em;
+  border: 0.5px solid #bfbaba;
+  margin-left: 1em;
+  border-radius: 0.5em;
+  border-top-right-radius: 0em;
+  border-bottom-right-radius: 0em;
+  margin-bottom: 0.3em;
+}
+
+.act-tabs li a{
+  text-decoration: none;
+  color : orangered;
+}
+
+.act-tabs li:hover{
+  background: #bfbaba;
+}
+
+.tab-content{
+  width: 70%;
+  margin: 2em 3em 2em 0em;
+  border: 0.5px solid #bfbaba;
+  border-radius: 1em;
+  margin-left: 0.5em;
+  border-top-left-radius: 0em;
+  border-bottom-left-radius: 0em;
+  padding: 1em;
+}
+
+.tab-pane h3{
+  font-size: 1.8em;
+}
+
+.tab-pane p{
+  margin-top: 0.5em;
+}
+
+.tab-pane ol{
+  padding-left: 1.5em;
+  line-height: 2em;
+}
+
+.tab-pane table tr td{
+  padding: 0.4em 0em 0.4em 1em;
+  background: #f56337;
+  border-radius: 0.5em;
+  /*border: 0.5px solid #000;*/
+}
+
+.tab-pane table tr td a{
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.tab-pane table tr td a:hover{
+  color: #000000;
+}
