--- a/css/theflex.css
+++ b/css/theflex.css
@@ -15,8 +15,8 @@ i.arrow {
 #flexslider{
     /* position: relative; */
     width: 45%;
-    margin-top: 5em;
-    margin-left: 3em;
+    margin-right: 3em;
+    margin-left: 0.5em;
     /* top:100vh; */
 }
 #flexslider .flex{
@@ -58,7 +58,7 @@ i.arrow {
     background: #fff;
     text-decoration: none;
     color: #000000;
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 #flexslider .flex .thecontent{
     grid-area: thecontent;
