--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,7 @@ body{
 #special-area{
   display: flex;
   margin-top: 5em;
+  flex-direction: row;
 }
 
 .btn{
@@ -178,6 +179,7 @@ body{
     bottom: 0;
     width: 100%;
     margin-top: 4em;
+    min-height: 1000px;
     padding: 0em 1.5em 1em 1.5em;
 }
 
@@ -192,6 +194,7 @@ body{
   display: flex;
   margin: 2em 2.5em 1em 0em;
   border-radius: 1.5em;
+  min-height: 850px;
 }
 
 .act-tabs{
@@ -211,6 +214,10 @@ body{
   margin-bottom: 0.3em;
 }
 
+.act-tabs li.active{
+    background-color: rgb(240, 239, 239);
+}
+
 .act-tabs li a{
   text-decoration: none;
   color : orangered;
@@ -222,6 +229,7 @@ body{
 
 .tab-content{
   width: 70%;
+  /* position: absolute; */
   margin: 2em 3em 2em 0em;
   border: 0.5px solid #bfbaba;
   border-radius: 1em;
@@ -230,32 +238,42 @@ body{
   border-bottom-left-radius: 0em;
   padding: 1em;
 }
+.tab-content div.active{
+    display: block;
+}
 
-.tab-pane h3{
+.tab-content .tab-pane h3{
   font-size: 1.8em;
 }
 
-.tab-pane p{
+.tab-content .tab-pane p{
   margin-top: 0.5em;
 }
 
-.tab-pane ol{
+.tab-content .tab-pane ol{
   padding-left: 1.5em;
   line-height: 2em;
 }
 
-.tab-pane table tr td{
+.tab-content .tab-pane table tr td{
   padding: 0.4em 0em 0.4em 1em;
   background: #f56337;
   border-radius: 0.5em;
   /*border: 0.5px solid #000;*/
 }
 
-.tab-pane table tr td a{
+.tab-content .tab-pane table tr td a{
   text-decoration: none;
   color: #ffffff;
 }
 
-.tab-pane table tr td a:hover{
+.tab-content .tab-pane table tr td a:hover{
   color: #000000;
+}
+
+@media screen and (max-width:900px){
+    #special-area{
+        display: flex;
+        flex-direction: column;
+    }
 }
