--- a/css/header.css
+++ b/css/header.css
@@ -121,10 +121,13 @@
     color:#fff;
     text-align: center;
     font-size: 18px;
-    color:#B9B9B9;
     padding-top: 5vw;
     z-index: 100;
-
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 120px;
+    grid-template-areas: "poster bro contacts mhrd"
+    "cc cc . icons";
 }
 #footer a{
     text-decoration: none;
@@ -146,4 +149,28 @@
   margin-right: 0.4em;
   padding-top: 0.2em;
   border-radius: 0.5em;
+}
+
+#footer h2{
+    color:#fff;
+}
+
+#footer #icons{
+    display: grid;
+    grid-area:icons;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+#footer #icons div{
+    width:60px;
+    height:60px;
+    border-radius: 30px;
+    background-color: #4c7099;
+    font-size: 1.5em;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+#footer #icons div:hover{
+    background: orangered;
 }
