--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ body{
 
 #activites{
     position: relative;
-    background-color: orangered;
+    background-color: rgb(255, 177, 0);
     color:#fff;
     font-size: 1.2em;
     bottom: 0;
@@ -189,7 +189,6 @@ body{
 }
 
 #act-content{
-  background: #ffffff;
   color: #000000;
   display: flex;
   margin: 2em 2.5em 1em 0em;
@@ -204,6 +203,7 @@ body{
 }
 
 .act-tabs li{
+    background-color: #fff;
   list-style: none;
   padding: 1em 0em 1em 0em;
   border: 0.5px solid #bfbaba;
@@ -228,14 +228,13 @@ body{
 }
 
 .tab-content{
-  width: 70%;
-  /* position: absolute; */
-  margin: 2em 3em 2em 0em;
+    background-color: #fff;
+    width: 70%;
+    margin: 2em 3em 2em 0em;
   border: 0.5px solid #bfbaba;
   border-radius: 1em;
   margin-left: 0.5em;
   border-top-left-radius: 0em;
-  border-bottom-left-radius: 0em;
   padding: 1em;
 }
 .tab-content div.active{
