--- a/css/style.css
+++ b/css/style.css
@@ -108,54 +108,6 @@ body{
     }
 }
 
-.ribbon {
-    font-size: 2em !important;
-    width: 70%;
-    position: absolute;
-    bottom: 0px;
-    left:calc(15% - 96px);
-    background: rgb(255, 165, 0);
-    color: #fff;
-    text-align: center;
-    padding: 1em 2em; /* Adjust to suit */
-    margin-bottom: 1.5em;
-    margin-left: 1em;
-   }
-   .ribbon::before, .ribbon::after {
-    content: "";
-    position: absolute;
-    display: block;
-    bottom: -1em;
-    border: 1.5em solid rgb(224, 149, 10);
-    z-index: -1;
-   }
-   .ribbon:before {
-    left: -2em;
-    border-right-width: 1.5em;
-    border-left-color: transparent;
-   }
-   .ribbon:after {
-    right: -2em;
-    border-left-width: 1.5em;
-    border-right-color: transparent;
-   }
-   .ribbon .ribbon-content:before, .ribbon .ribbon-content:after {
-    content: "";
-    position: absolute;
-    display: block;
-    border-style: solid;
-    border-color: rgb(179, 119, 8) transparent transparent transparent;
-    bottom: -1em;
-   }
-   .ribbon .ribbon-content:before {
-    left: 0;
-    border-width: 1em 0 0 1em;
-   }
-   .ribbon .ribbon-content:after {
-    right: 0;
-    border-width: 1em 1em 0 0;
-   }
-
 #special-area{
   display: flex;
   margin-top: 5em;
@@ -275,4 +227,48 @@ body{
         display: flex;
         flex-direction: column;
     }
+}
+
+@keyframes slideIn{
+    0%{
+        margin-left: 60%;
+        margin-right: -60%;
+    }
+    100%{
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+@keyframes slideText{
+    0%{
+        margin-left: 60%;
+        margin-right: -60%;
+    }
+    20%,100%{
+        margin-left: 6vw;
+        margin-right: 0;
+    }
+}
+#sidediv{
+    width:60%;
+    position: absolute;
+    bottom: 0px;
+    right: 0;
+    background-color: #ff8a00;
+    height:5em;
+    margin-bottom:2em;
+    display: flex;
+    box-shadow: 2px 2px 8px #000;
+    -webkit-clip-path: polygon(24% 0, 100% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(4vw 0, 100% 0, 100% 100%, 0% 100%);
+    animation: slideIn 2s ease;
+    /* animation-delay: 5s; */
+}
+
+#sidediv p{
+    color:#fff;
+    font-size: 2em;
+    margin-left: 6vw;
+    margin-top:auto;
+    animation: slideText 5s ease infinite;
 }
